@@ -13,7 +13,7 @@ jei_version = 15.2.0.27
 curios_version = 5.4.5+1.20.1
 
 modid = l2hostility
-ll_version = 2.4.13-pre14
+ll_version = 2.4.13-pre18
 lljij = true
 rootMod = false
 
