@@ -24,9 +24,9 @@
   "item.l2hostility.ring_of_healing": "再生之戒",
   "item.l2hostility.chaos_ingot": "混沌锭",
   "item.l2hostility.flaming_thorn": "魔焰荆棘",
-  "item.l2hostility.imagine_breaker": "幻想杀手",
+  "item.l2hostility.imagine_breaker": "破咒遗骨",
   "item.l2hostility.witch_wand": "混乱魔药法杖",
-  "item.l2hostility.infinity_glove": "无限手套",
+  "item.l2hostility.infinity_glove": "宝石手套",
   "item.l2hostility.oddeyes_glasses": "异色眼镜",
   "item.l2hostility.triple_strip_cape": "三色披风",
   "item.l2hostility.sealed_item": "被封印的物品",
@@ -34,9 +34,9 @@
   "item.l2hostility.eternal_witch_charge": "永恒嗜魔弹",
   "item.l2hostility.witch_charge": "嗜魔弹",
   "item.l2hostility.witch_droplet": "女巫浓缩凝露",
-  "item.l2hostility.abrahadabra": "以雷霆赐汝一死",
+  "item.l2hostility.abrahadabra": "扭曲之魂",
   "item.l2hostility.greed_of_nidhoggur": "尼德霍格之欲",
-  "item.l2hostility.platinum_star": "白金之星",
+  "item.l2hostility.platinum_star": "破风拳套",
   "item.l2hostility.pocket_of_restoration": "解咒口袋",
   "item.l2hostility.book_of_omniscience": "全知之书",
   "item.l2hostility.book_of_reprint": "附魔影本",
