@@ -25,9 +25,9 @@
 	"ring_of_healing": "再生之戒",
 	"chaos_ingot": "混沌锭",
 	"flaming_thorn": "魔焰荆棘",
-	"imagine_breaker": "幻想杀手",
+	"imagine_breaker": "破咒遗骨",
 	"witch_wand": "混乱魔药法杖",
-	"infinity_glove": "无限手套",
+	"infinity_glove": "宝石手套",
 	"oddeyes_glasses": "异色眼镜",
 	"triple_strip_cape": "三色披风",
 	"sealed_item": "被封印的物品",
@@ -35,9 +35,9 @@
 	"eternal_witch_charge": "永恒嗜魔弹",
 	"witch_charge": "嗜魔弹",
 	"witch_droplet": "女巫浓缩凝露",
-	"abrahadabra": "以雷霆赐汝一死",
+	"abrahadabra": "扭曲之魂",
 	"greed_of_nidhoggur": "尼德霍格之欲",
-	"platinum_star": "白金之星",
+	"platinum_star": "破风拳套",
 	"pocket_of_restoration": "解咒口袋",
 	"book_of_omniscience": "全知之书",
 	"book_of_reprint": "附魔影本",
